--- a/css/mscom-grid-ltr.scss
+++ b/css/mscom-grid-ltr.scss
@@ -1,4 +1,4 @@
-$dir: rtl;
+$dir: ltr;
 
 
 
@@ -6,4 +6,4 @@ $dir: rtl;
 //------------------------------------
 //          #IMPORTS
 //------------------------------------
-@import "mscomGrid";
+@import "mscom-grid";
