--- a/css/mscom-grid-rtl.scss
+++ b/css/mscom-grid-rtl.scss
@@ -1,5 +1,4 @@
-$dir: ltr;
-$dirMixed: true;
+$dir: rtl;
 
 
 
@@ -7,4 +6,4 @@ $dirMixed: true;
 //------------------------------------
 //          #IMPORTS
 //------------------------------------
-@import "mscomGrid";
+@import "mscom-grid";
