--- a/css/mscom-grid-mixed.scss
+++ b/css/mscom-grid-mixed.scss
@@ -1,4 +1,5 @@
 $dir: ltr;
+$dirMixed: true;
 
 
 
@@ -6,4 +7,4 @@ $dir: ltr;
 //------------------------------------
 //          #IMPORTS
 //------------------------------------
-@import "mscomGrid";
+@import "mscom-grid";
