--- a/css/mscom-grid.scss
+++ b/css/mscom-grid.scss
@@ -36,6 +36,11 @@
     &.full {
         width: 100%;
         max-width: none;
+
+        &.zero-margin {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 
     &.fixed {
