--- a/css/mscom-grid-mixed.css
+++ b/css/mscom-grid-mixed.css
@@ -18,6 +18,10 @@
   width: 100%;
   max-width: none;
 }
+.ms-grid.full.zero-margin {
+  padding-left: 0;
+  padding-right: 0;
+}
 .ms-grid.fixed {
   padding-left: 2px;
   padding-right: 2px;
@@ -369,6 +373,11 @@
   }
 }
 @media screen and (min-width: 320px) {
+  .xs-col-1-24,
+  .xs-col-4-24 {
+    width: 16.66667%;
+  }
+
   .xs-col-2-24,
   .xs-col-8-24 {
     width: 33.33333%;
@@ -395,6 +404,11 @@
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-1-24,
+  .s-col-2-24 {
+    width: 8.33333%;
+  }
+
   .s-col-2-24,
   .s-col-4-24 {
     width: 16.66667%;
@@ -451,6 +465,10 @@
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-1-24 {
+    width: 4.16667%;
+  }
+
   .m-col-2-24 {
     width: 8.33333%;
   }
@@ -544,6 +562,10 @@
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-1-24 {
+    width: 4.16667%;
+  }
+
   .l-col-2-24 {
     width: 8.33333%;
   }
@@ -637,6 +659,10 @@
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-1-24 {
+    width: 4.16667%;
+  }
+
   .xl-col-2-24 {
     width: 8.33333%;
   }
@@ -1031,21 +1057,6 @@
 
   [dir="rtl"] .xl-col-4-offset-3 {
     margin-right: 75%;
-    margin-left: 0;
-  }
-}
-@media screen and (min-width: 540px) {
-  .s-col-5-offset-1 {
-    margin-left: 50%;
-  }
-
-  [dir="ltr"] .s-col-5-offset-1 {
-    margin-left: 50%;
-    margin-right: 0;
-  }
-
-  [dir="rtl"] .s-col-5-offset-1 {
-    margin-right: 50%;
     margin-left: 0;
   }
 }
