Having default state include all manual colspans

--- a/src/sass/_manual-colspans.scss
+++ b/src/sass/_manual-colspans.scss
@@ -1,8 +1,8 @@
 @import "colspans/colspans24";
-// @import "colspans/colspans16";
-// @import "colspans/colspans12";
-// @import "colspans/colspans8";
-// @import "colspans/colspans6";
-// @import "colspans/colspans5";
-// @import "colspans/colspans4";
-// @import "colspans/colspans3";
+@import "colspans/colspans16";
+@import "colspans/colspans12";
+@import "colspans/colspans8";
+@import "colspans/colspans6";
+@import "colspans/colspans5";
+@import "colspans/colspans4";
+@import "colspans/colspans3";
