Documentation updates, manual colspan bug fix
Signed-off-by: Kyle Zinter <kylezinter@live.com>

--- a/demo/sass/demo.scss
+++ b/demo/sass/demo.scss
@@ -38,6 +38,12 @@
 	width: 100%;
 }
 
+.fullGridDemo {
+	h1, h2, h3, h4 {
+		display: none;
+	}
+}
+
 /*Clickable gridline styles*/
 .gridlines {
 	display: none;
