--- a/demo/sass/css/demo.css
+++ b/demo/sass/css/demo.css
@@ -1952,94 +1952,76 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 320px) {
-  .xs-col-1-24,
-  .xs-col-4-24 {
+  .xs-col-1-24 {
     width: 16.66667%;
   }
 
-  .xs-col-2-24,
-  .xs-col-8-24 {
+  .xs-col-2-24 {
     width: 33.33333%;
   }
 
-  .xs-col-3-24,
-  .xs-col-12-24 {
+  .xs-col-3-24 {
     width: 50%;
   }
 
-  .xs-col-4-24,
-  .xs-col-16-24 {
+  .xs-col-4-24 {
     width: 66.66667%;
   }
 
-  .xs-col-5-24,
-  .xs-col-20-24 {
+  .xs-col-5-24 {
     width: 83.33333%;
   }
 
-  .xs-col-6-24,
-  .xs-col-24-24 {
+  .xs-col-6-24 {
     width: 100%;
   }
 }
 @media screen and (min-width: 540px) {
-  .s-col-1-24,
-  .s-col-2-24 {
+  .s-col-1-24 {
     width: 8.33333%;
   }
 
-  .s-col-2-24,
-  .s-col-4-24 {
+  .s-col-2-24 {
     width: 16.66667%;
   }
 
-  .s-col-3-24,
-  .s-col-6-24 {
+  .s-col-3-24 {
     width: 25%;
   }
 
-  .s-col-4-24,
-  .s-col-8-24 {
+  .s-col-4-24 {
     width: 33.33333%;
   }
 
-  .s-col-5-24,
-  .s-col-10-24 {
+  .s-col-5-24 {
     width: 41.66667%;
   }
 
-  .s-col-6-24,
-  .s-col-12-24 {
+  .s-col-6-24 {
     width: 50%;
   }
 
-  .s-col-7-24,
-  .s-col-14-24 {
+  .s-col-7-24 {
     width: 58.33333%;
   }
 
-  .s-col-8-24,
-  .s-col-16-24 {
+  .s-col-8-24 {
     width: 66.66667%;
   }
 
-  .s-col-9-24,
-  .s-col-18-24 {
+  .s-col-9-24 {
     width: 75%;
   }
 
-  .s-col-10-24,
-  .s-col-20-24 {
+  .s-col-10-24 {
     width: 83.33333%;
   }
 
-  .s-col-11-24,
-  .s-col-22-24 {
+  .s-col-11-24 {
     width: 91.66667%;
   }
 
-  .s-col-12-24,
-  .s-col-24-24 {
+  .s-col-12-24 {
     width: 100%;
   }
 }
@@ -2331,6 +2313,685 @@ body.offsetopened {
   }
 
   .xl-col-24-24 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-16 {
+    width: 25%;
+  }
+
+  .xs-col-2-16 {
+    width: 50%;
+  }
+
+  .xs-col-3-16 {
+    width: 75%;
+  }
+
+  .xs-col-4-16 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-16 {
+    width: 25%;
+  }
+
+  .s-col-2-16 {
+    width: 50%;
+  }
+
+  .s-col-3-16 {
+    width: 75%;
+  }
+
+  .s-col-4-16 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-16 {
+    width: 12.5%;
+  }
+
+  .m-col-2-16 {
+    width: 25%;
+  }
+
+  .m-col-3-16 {
+    width: 37.5%;
+  }
+
+  .m-col-4-16 {
+    width: 50%;
+  }
+
+  .m-col-5-16 {
+    width: 62.5%;
+  }
+
+  .m-col-6-16 {
+    width: 75%;
+  }
+
+  .m-col-7-16 {
+    width: 87.5%;
+  }
+
+  .m-col-8-16 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-16 {
+    width: 12.5%;
+  }
+
+  .l-col-2-16 {
+    width: 25%;
+  }
+
+  .l-col-3-16 {
+    width: 37.5%;
+  }
+
+  .l-col-4-16 {
+    width: 50%;
+  }
+
+  .l-col-5-16 {
+    width: 62.5%;
+  }
+
+  .l-col-6-16 {
+    width: 75%;
+  }
+
+  .l-col-7-16 {
+    width: 87.5%;
+  }
+
+  .l-col-8-16 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-16 {
+    width: 6.25%;
+  }
+
+  .xl-col-2-16 {
+    width: 12.5%;
+  }
+
+  .xl-col-3-16 {
+    width: 18.75%;
+  }
+
+  .xl-col-4-16 {
+    width: 25%;
+  }
+
+  .xl-col-5-16 {
+    width: 31.25%;
+  }
+
+  .xl-col-6-16 {
+    width: 37.5%;
+  }
+
+  .xl-col-7-16 {
+    width: 43.75%;
+  }
+
+  .xl-col-8-16 {
+    width: 50%;
+  }
+
+  .xl-col-9-16 {
+    width: 56.25%;
+  }
+
+  .xl-col-10-16 {
+    width: 62.5%;
+  }
+
+  .xl-col-11-16 {
+    width: 68.75%;
+  }
+
+  .xl-col-12-16 {
+    width: 75%;
+  }
+
+  .xl-col-13-16 {
+    width: 81.25%;
+  }
+
+  .xl-col-14-16 {
+    width: 87.5%;
+  }
+
+  .xl-col-15-16 {
+    width: 93.75%;
+  }
+
+  .xl-col-16-16 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-12 {
+    width: 50%;
+  }
+
+  .xs-col-2-12 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-12 {
+    width: 25%;
+  }
+
+  .s-col-2-12 {
+    width: 50%;
+  }
+
+  .s-col-3-12 {
+    width: 75%;
+  }
+
+  .s-col-4-12 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-12 {
+    width: 25%;
+  }
+
+  .m-col-2-12 {
+    width: 50%;
+  }
+
+  .m-col-3-12 {
+    width: 75%;
+  }
+
+  .m-col-4-12 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-12 {
+    width: 8.33333%;
+  }
+
+  .l-col-2-12 {
+    width: 16.66667%;
+  }
+
+  .l-col-3-12 {
+    width: 25%;
+  }
+
+  .l-col-4-12 {
+    width: 33.33333%;
+  }
+
+  .l-col-5-12 {
+    width: 41.66667%;
+  }
+
+  .l-col-6-12 {
+    width: 50%;
+  }
+
+  .l-col-7-12 {
+    width: 58.33333%;
+  }
+
+  .l-col-8-12 {
+    width: 66.66667%;
+  }
+
+  .l-col-9-12 {
+    width: 75%;
+  }
+
+  .l-col-10-12 {
+    width: 83.33333%;
+  }
+
+  .l-col-11-12 {
+    width: 91.66667%;
+  }
+
+  .l-col-12-12 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-12 {
+    width: 8.33333%;
+  }
+
+  .xl-col-2-12 {
+    width: 16.66667%;
+  }
+
+  .xl-col-3-12 {
+    width: 25%;
+  }
+
+  .xl-col-4-12 {
+    width: 33.33333%;
+  }
+
+  .xl-col-5-12 {
+    width: 41.66667%;
+  }
+
+  .xl-col-6-12 {
+    width: 50%;
+  }
+
+  .xl-col-7-12 {
+    width: 58.33333%;
+  }
+
+  .xl-col-8-12 {
+    width: 66.66667%;
+  }
+
+  .xl-col-9-12 {
+    width: 75%;
+  }
+
+  .xl-col-10-12 {
+    width: 83.33333%;
+  }
+
+  .xl-col-11-12 {
+    width: 91.66667%;
+  }
+
+  .xl-col-12-12 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-8 {
+    width: 50%;
+  }
+
+  .xs-col-2-8 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-8 {
+    width: 50%;
+  }
+
+  .s-col-2-8 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-8 {
+    width: 25%;
+  }
+
+  .m-col-2-8 {
+    width: 50%;
+  }
+
+  .m-col-3-8 {
+    width: 75%;
+  }
+
+  .m-col-4-8 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-8 {
+    width: 12.5%;
+  }
+
+  .l-col-2-8 {
+    width: 25%;
+  }
+
+  .l-col-3-8 {
+    width: 37.5%;
+  }
+
+  .l-col-4-8 {
+    width: 50%;
+  }
+
+  .l-col-5-8 {
+    width: 62.5%;
+  }
+
+  .l-col-6-8 {
+    width: 75%;
+  }
+
+  .l-col-7-8 {
+    width: 87.5%;
+  }
+
+  .l-col-8-8 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-8 {
+    width: 12.5%;
+  }
+
+  .xl-col-2-8 {
+    width: 25%;
+  }
+
+  .xl-col-3-8 {
+    width: 37.5%;
+  }
+
+  .xl-col-4-8 {
+    width: 50%;
+  }
+
+  .xl-col-5-8 {
+    width: 62.5%;
+  }
+
+  .xl-col-6-8 {
+    width: 75%;
+  }
+
+  .xl-col-7-8 {
+    width: 87.5%;
+  }
+
+  .xl-col-8-8 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-6 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-6 {
+    width: 50%;
+  }
+
+  .s-col-2-6 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-6 {
+    width: 33.33333%;
+  }
+
+  .m-col-2-6 {
+    width: 66.66667%;
+  }
+
+  .m-col-3-6 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-6 {
+    width: 16.66667%;
+  }
+
+  .l-col-2-6 {
+    width: 33.33333%;
+  }
+
+  .l-col-3-6 {
+    width: 50%;
+  }
+
+  .l-col-4-6 {
+    width: 66.66667%;
+  }
+
+  .l-col-5-6 {
+    width: 83.33333%;
+  }
+
+  .l-col-6-6 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-6 {
+    width: 16.66667%;
+  }
+
+  .xl-col-2-6 {
+    width: 33.33333%;
+  }
+
+  .xl-col-3-6 {
+    width: 50%;
+  }
+
+  .xl-col-4-6 {
+    width: 66.66667%;
+  }
+
+  .xl-col-5-6 {
+    width: 83.33333%;
+  }
+
+  .xl-col-6-6 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-5 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-5 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-5 {
+    width: 20%;
+  }
+
+  .m-col-2-5 {
+    width: 40%;
+  }
+
+  .m-col-3-5 {
+    width: 60%;
+  }
+
+  .m-col-4-5 {
+    width: 80%;
+  }
+
+  .m-col-5-5 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-5 {
+    width: 20%;
+  }
+
+  .l-col-2-5 {
+    width: 40%;
+  }
+
+  .l-col-3-5 {
+    width: 60%;
+  }
+
+  .l-col-4-5 {
+    width: 80%;
+  }
+
+  .l-col-5-5 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-5 {
+    width: 20%;
+  }
+
+  .xl-col-2-5 {
+    width: 40%;
+  }
+
+  .xl-col-3-5 {
+    width: 60%;
+  }
+
+  .xl-col-4-5 {
+    width: 80%;
+  }
+
+  .xl-col-5-5 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-4 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-4 {
+    width: 50%;
+  }
+
+  .s-col-2-4 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-4 {
+    width: 25%;
+  }
+
+  .m-col-2-4 {
+    width: 50%;
+  }
+
+  .m-col-3-4 {
+    width: 75%;
+  }
+
+  .m-col-4-4 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-4 {
+    width: 25%;
+  }
+
+  .l-col-2-4 {
+    width: 50%;
+  }
+
+  .l-col-3-4 {
+    width: 75%;
+  }
+
+  .l-col-4-4 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-4 {
+    width: 25%;
+  }
+
+  .xl-col-2-4 {
+    width: 50%;
+  }
+
+  .xl-col-3-4 {
+    width: 75%;
+  }
+
+  .xl-col-4-4 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 320px) {
+  .xs-col-1-3 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 540px) {
+  .s-col-1-3 {
+    width: 33.33333%;
+  }
+
+  .s-col-2-3 {
+    width: 66.66667%;
+  }
+
+  .s-col-3-3 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .m-col-1-3 {
+    width: 33.33333%;
+  }
+
+  .m-col-2-3 {
+    width: 66.66667%;
+  }
+
+  .m-col-3-3 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .l-col-1-3 {
+    width: 33.33333%;
+  }
+
+  .l-col-2-3 {
+    width: 66.66667%;
+  }
+
+  .l-col-3-3 {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .xl-col-1-3 {
+    width: 33.33333%;
+  }
+
+  .xl-col-2-3 {
+    width: 66.66667%;
+  }
+
+  .xl-col-3-3 {
     width: 100%;
   }
 }
@@ -5399,6 +6060,10 @@ body.offsetopened {
 
 .fixed .colNum, .zero-margin .colNum {
   width: 100%;
+}
+
+.fullGridDemo h1, .fullGridDemo h2, .fullGridDemo h3, .fullGridDemo h4 {
+  display: none;
 }
 
 /*Clickable gridline styles*/
