Support full col spans automatic
Allows an individual to not "mentally breakout" of grid they are working
in if they want a full width column span automagically.

--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -190,7 +190,16 @@
 .col-4-12,
 .col-2-16,
 .col-4-16,
-.col-8-16 {
+.col-8-16,
+.col-2-2,
+.col-3-3,
+.col-4-4,
+.col-5-5,
+.col-6-6,
+.col-8-8,
+.col-12-12,
+.col-16-16,
+.col-24-24 {
     width: percentage(1);
 }
 
