--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -59,6 +59,9 @@
     }
 
     &.zero-margin {
+        padding-left: 0;
+        padding-right: 0;
+        
         .#{$grid-prefix}row {
             margin-left: 0;
             margin-right: 0;
