0 column offset option for upstream breakpoints

--- a/demo/sass/css/demo.css
+++ b/demo/sass/css/demo.css
@@ -3487,6 +3487,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-2-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-2-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-2-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-2-offset-1 {
     margin-left: 50%;
   }
@@ -3502,6 +3516,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-2-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-2-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-2-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-2-offset-1 {
     margin-left: 50%;
   }
@@ -3517,6 +3545,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-2-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-2-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-2-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-2-offset-1 {
     margin-left: 50%;
   }
@@ -3532,6 +3574,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-3-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-3-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-3-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-3-offset-1 {
     margin-left: 33.33333%;
   }
@@ -3561,6 +3617,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-3-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-3-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-3-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-3-offset-1 {
     margin-left: 33.33333%;
   }
@@ -3590,6 +3660,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-3-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-3-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-3-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-3-offset-1 {
     margin-left: 33.33333%;
   }
@@ -3619,6 +3703,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-3-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-3-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-3-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-3-offset-1 {
     margin-left: 33.33333%;
   }
@@ -3648,6 +3746,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-4-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-4-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-4-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-4-offset-1 {
     margin-left: 50%;
   }
@@ -3663,6 +3775,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-4-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-4-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-4-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-4-offset-1 {
     margin-left: 25%;
   }
@@ -3706,6 +3832,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-4-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-4-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-4-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-4-offset-1 {
     margin-left: 25%;
   }
@@ -3749,6 +3889,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-4-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-4-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-4-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-4-offset-1 {
     margin-left: 25%;
   }
@@ -3792,6 +3946,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-5-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-5-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-5-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-5-offset-1 {
     margin-left: 20%;
   }
@@ -3849,6 +4017,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-5-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-5-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-5-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-5-offset-1 {
     margin-left: 20%;
   }
@@ -3906,6 +4088,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-5-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-5-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-5-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-5-offset-1 {
     margin-left: 20%;
   }
@@ -3963,6 +4159,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-6-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-6-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-6-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-6-offset-1 {
     margin-left: 50%;
   }
@@ -3978,6 +4188,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-6-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-6-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-6-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-6-offset-1 {
     margin-left: 33.33333%;
   }
@@ -4007,6 +4231,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-6-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-6-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-6-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-6-offset-1 {
     margin-left: 16.66667%;
   }
@@ -4078,6 +4316,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-6-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-6-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-6-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-6-offset-1 {
     margin-left: 16.66667%;
   }
@@ -4149,6 +4401,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 320px) {
+  .xs-col-8-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xs-col-8-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xs-col-8-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xs-col-8-offset-1 {
     margin-left: 50%;
   }
@@ -4164,6 +4430,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-8-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-8-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-8-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-8-offset-1 {
     margin-left: 50%;
   }
@@ -4179,6 +4459,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-8-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-8-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-8-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-8-offset-1 {
     margin-left: 25%;
   }
@@ -4222,6 +4516,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-8-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-8-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-8-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-8-offset-1 {
     margin-left: 12.5%;
   }
@@ -4321,6 +4629,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-8-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-8-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-8-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-8-offset-1 {
     margin-left: 12.5%;
   }
@@ -4420,6 +4742,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 320px) {
+  .xs-col-12-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xs-col-12-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xs-col-12-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xs-col-12-offset-1 {
     margin-left: 50%;
   }
@@ -4435,6 +4771,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-12-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-12-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-12-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-12-offset-1 {
     margin-left: 25%;
   }
@@ -4478,6 +4828,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-12-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-12-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-12-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-12-offset-1 {
     margin-left: 25%;
   }
@@ -4521,6 +4885,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-12-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-12-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-12-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-12-offset-1 {
     margin-left: 8.33333%;
   }
@@ -4676,6 +5054,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-12-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-12-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-12-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-12-offset-1 {
     margin-left: 8.33333%;
   }
@@ -4831,6 +5223,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 320px) {
+  .xs-col-16-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xs-col-16-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xs-col-16-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xs-col-16-offset-1 {
     margin-left: 25%;
   }
@@ -4874,6 +5280,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-16-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-16-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-16-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-16-offset-1 {
     margin-left: 25%;
   }
@@ -4917,6 +5337,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-16-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-16-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-16-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-16-offset-1 {
     margin-left: 12.5%;
   }
@@ -5016,6 +5450,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-16-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-16-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-16-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-16-offset-1 {
     margin-left: 12.5%;
   }
@@ -5115,6 +5563,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-16-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-16-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-16-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-16-offset-1 {
     margin-left: 6.25%;
   }
@@ -5326,6 +5788,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 320px) {
+  .xs-col-24-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xs-col-24-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xs-col-24-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xs-col-24-offset-1 {
     margin-left: 16.66667%;
   }
@@ -5397,6 +5873,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 540px) {
+  .s-col-24-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .s-col-24-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .s-col-24-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .s-col-24-offset-1 {
     margin-left: 8.33333%;
   }
@@ -5552,6 +6042,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 768px) {
+  .m-col-24-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .m-col-24-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .m-col-24-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .m-col-24-offset-1 {
     margin-left: 4.16667%;
   }
@@ -5875,6 +6379,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 992px) {
+  .l-col-24-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .l-col-24-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .l-col-24-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .l-col-24-offset-1 {
     margin-left: 4.16667%;
   }
@@ -6198,6 +6716,20 @@ body.offsetopened {
   }
 }
 @media screen and (min-width: 1400px) {
+  .xl-col-24-offset-0 {
+    margin-left: 0%;
+  }
+
+  [dir="ltr"] .xl-col-24-offset-0 {
+    margin-left: 0%;
+    margin-right: 0;
+  }
+
+  [dir="rtl"] .xl-col-24-offset-0 {
+    margin-right: 0%;
+    margin-left: 0;
+  }
+
   .xl-col-24-offset-1 {
     margin-left: 4.16667%;
   }
