--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -200,9 +200,9 @@
 
 
 
-//------------------------------------
-//          #MEDIA QUERIES
-//------------------------------------
+//----------------------------------------------------
+//          #MEDIA QUERIES FOR AUTOMATIC RWD OPTION
+//----------------------------------------------------
 @media screen and (min-width: $vp1) {
     .col-1-16 {
         width: percentage(1 / 4);
