--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -203,210 +203,8 @@
 //----------------------------------------------------
 //          #MEDIA QUERIES FOR AUTOMATIC RWD OPTION
 //----------------------------------------------------
-@media screen and (min-width: $vp1) {
-    .col-1-16 {
-        width: percentage(1 / 4);
-    }
+@import "automaticRWD";
 
-    .col-2-16 {
-        width: percentage(1 / 2);
-    }
-}
-
-@media screen and (min-width: $vp2) {
-    .#{$grid-prefix}grid {
-        width: 90%;
-    }
-
-    .col-1-4,
-    .col-1-6,
-    .col-1-8,
-    .col-2-12,
-    .col-6-24,
-    .col-6-24 + .preceding-col-6-24  {
-        width: percentage(1 / 2);
-    }
-
-    .col-1-3 {
-        width: percentage(1 / 3);
-    }
-
-    .col-2-3 {
-        width: percentage(2 / 3);
-    }
-
-    .col-1-12 {
-        width: percentage(1 / 4);
-    }
-
-    .col-3-6 + .col-1-6,
-    .col-2-4,
-    .col-2-6,
-    .col-4-8,
-    .col-3-4 + .col-1-4,
-    .preceding-col-1-4,
-    .preceding-col-6-24,
-    .preceding-col-6-24 ~ .col-6-24 {
-        width: percentage(1);
-    }
-
-    .col-1-24 {
-        width: percentage(1 / 12);
-    }
-}
-
-@media screen and (min-width: $vp3) {
-    .col-1-2,
-    .col-2-4,
-    .col-4-6 ~ .col-1-6,
-    .preceding-col-1-6,
-    .col-2-8,
-    .col-6-8 ~ .col-1-8,
-    .preceding-col-1-8,
-    .col-4-16,
-    .col-12-24 {
-        width: percentage(1 / 2);
-    }
-
-    .col-1-4,
-    .col-3-4 + .col-1-4,
-    .preceding-col-1-4,
-    .col-1-8,
-    .col-2-16,
-    .col-6-24,
-    .preceding-col-6-24,
-    .col-6-24 + .preceding-col-6-24,
-    .preceding-col-6-24 ~ .col-6-24  {
-        width: percentage(1 / 4);
-    }
-
-    .col-1-5 {
-        width: percentage(1 / 5);
-    }
-
-    .col-2-5 {
-        width: percentage(2 / 5);
-    }
-
-    .col-3-5 {
-        width: percentage(3 / 5);
-    }
-
-    .col-4-5 {
-        width: percentage(4 / 5);
-    }
-
-    .col-1-6,
-    .col-3-6 + .col-1-6  {
-        width: percentage(1 / 3);
-    }
-
-    .col-3-4,
-    .col-1-8 + .preceding-col-1-8 {
-        width: percentage(3 / 4);
-    }
-
-    .col-2-6,
-    .col-1-6 + .preceding-col-1-6 {
-        width: percentage(2 / 3);
-    }
-
-
-    .col-4-4,
-    .col-3-6,
-    .col-4-6,
-    .col-4-6 + .col-2-6,
-    .preceding-col-2-6,
-    .col-4-8,
-    .col-6-8,
-    .col-6-8 + .col-2-8,
-    .preceding-col-2-8,
-    .col-8-16  {
-        width: percentage(1);
-    }
-
-    .col-1-16 {
-        width: percentage(1 / 8);
-    }
-
-    .col-1-24 {
-        width: percentage(1 / 24);
-    }
-}
-
-@media screen and (min-width: $vp4) {
-    .col-4-6 + .col-2-6,
-    .preceding-col-2-6,
-    .col-2-6,
-    .col-4-12 {
-        width: percentage(1 / 3);
-    }
-
-    .col-4-6 ~ .col-1-6,
-    .preceding-col-1-6,
-    .col-1-6,
-    .col-3-6 + .col-1-6,
-    .col-1-6 + .preceding-col-1-6,
-    .col-2-12 {
-        width: percentage(1 / 6);
-    }
-
-    .col-6-8 + .col-2-8, 
-    .preceding-col-2-8,
-    .col-2-8,
-    .col-2-16 {
-        width: percentage(1 / 4);
-    }
-
-    .col-6-8 ~ .col-1-8,
-    .preceding-col-1-8,
-    .col-1-8 + .preceding-col-1-8,
-    .col-1-8,
-    .col-1-16 {
-        width: percentage(1 / 8);
-    }
-
-    .col-3-6,
-    .col-4-8,
-    .col-4-16 {
-        width: percentage(1 / 2);
-    }
-
-    .col-4-6 {
-        width: percentage(2 / 3);
-    }
-
-    .col-6-6,
-    .col-8-16 {
-        width: percentage(3 / 3);
-    }
-
-    .col-6-8 {
-        width: percentage(3 / 4);
-    }
-
-    .col-1-12 {
-        width: percentage(1 / 12);
-    }
-}
-
-@media screen and (min-width: $vp5) {
-    .col-1-16 {
-        width: percentage(1 / 16);
-    }
-
-    .col-2-16 {
-        width: percentage(1 / 8);
-    }
-
-    .col-4-16 {
-        width: percentage(1 / 4);
-    }
-
-    .col-8-16 {
-        width: percentage(1 / 2);
-    }
-}
 
 
 
