--- a/demo/sass/demo.scss
+++ b/demo/sass/demo.scss
@@ -1,5 +1,5 @@
 /*CSS that is just for demo site purposes*/
-@import "../components/picchu/picchu";
+@import "../components/picchu/picchu.css";
 @import "../components/offsetmenu/src/scss/msdotcomoffsetmenu";
 @import "../../src/sass/mscom-grid-mixed";
 
@@ -125,7 +125,12 @@
 	margin-bottom: 1em;
 }
 
+.mini-feature-img {
+	width: 100%;
+}
+
 .caption-text {
+	display: block;
 	font-size: 0.8em;
 }
 
