--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -64,6 +64,7 @@
     }
 
     .#{$grid-prefix}row {
+        align-items: stretch;
         display: flex;
         flex-wrap: wrap;
         margin-left: -1em;
@@ -77,6 +78,10 @@
             margin-left: -2vw;
             margin-right: -2vw;
         }
+
+        &.vertically-centered {
+            align-items: center;
+        }
     }
 
     .#{$grid-prefix}row:after,
@@ -88,7 +93,6 @@
 }
 
 [class*="col-"] {
-    align-items: stretch;
     float: $left;
     width: 100%;
     position: relative;
