fixed gutter options additions

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -1,5 +1,7 @@
 $max-grid-width: 1600px;
-$fixed-col-margin: 2px; //4px fixed margin, gets doubled
+$fixed4: 2px;
+$fixed-small-margin: 2px; //4px fixed margin for start of small fixed option which steps up, 4px, 12px, 24px
+$fixed-large-margin: 4px; //8px fixed margin for start of large fixed option which steps up, 8px, 24px, 48px
 $grid-prefix: "ms-";
 $dirMixed: false !default; //Toggle for having mixed langauge support
 
