--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -40,57 +40,56 @@
         }
     }
 
-    &.fixed {
-        .#{$grid-prefix}row {
-            margin-left: -$fixed-col-margin;
-            margin-right: -$fixed-col-margin;
 
-            & > [class*="col-"] {
-                padding-left: $fixed-col-margin;
-                padding-right: $fixed-col-margin;
-            }
-        }
-    }
 
-    &.zero-margin {
-        .#{$grid-prefix}row {
-            margin-left: 0;
-            margin-right: 0;
+    //----------------------------------------------------
+//          #MEDIA QUERIES FOR FIXED COL OPTIONS
+//----------------------------------------------------
+@import "fixed-col-options";
 
-            & > [class*="col-"] {
-                padding-left: 0;
-                padding-right: 0;
-            }
-        }
-    }
 
+
+
+
+&.zero-margin {
     .#{$grid-prefix}row {
-        align-items: stretch;
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -1em;
-        margin-right: -1em;
-        margin-left: -1vw;
-        margin-right: -1vw;
+        margin-left: 0;
+        margin-right: 0;
 
-        &.content-flush {
-            margin-left: -2em;
-            margin-right: -2em;
-            margin-left: -2vw;
-            margin-right: -2vw;
-        }
-
-        &.vertically-centered {
-            align-items: center;
+        & > [class*="col-"] {
+            padding-left: 0;
+            padding-right: 0;
         }
     }
+}
 
-    .#{$grid-prefix}row:after,
-    [class*="col-"]:after {
-        content: "";
-        display: table;
-        clear: both;
+.#{$grid-prefix}row {
+    align-items: stretch;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -1em;
+    margin-right: -1em;
+    margin-left: -1vw;
+    margin-right: -1vw;
+
+    &.content-flush {
+        margin-left: -2em;
+        margin-right: -2em;
+        margin-left: -2vw;
+        margin-right: -2vw;
     }
+
+    &.vertically-centered {
+        align-items: center;
+    }
+}
+
+.#{$grid-prefix}row:after,
+[class*="col-"]:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 }
 
 [class*="col-"] {
