fixed grid full option

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -100,6 +100,9 @@ body.offsetopened {
 }
 .ms-grid.full {
   max-width: none;
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
 }
 .ms-grid.full.zero-margin {
   padding-left: 0;
