--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -34,6 +34,9 @@
 
     &.full {
         max-width: none;
+        padding-left: 0;
+        padding-right: 0;
+        width: 100%;
 
         &.zero-margin {
             padding-left: 0;
